2023-08-15  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tiff.c  Fix compillation problem in MSVC.


2023-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Default the alpha channel to
	type EXTRASAMPLE_UNASSALPHA(2).  The default was
	EXTRASAMPLE_UNSPECIFIED(0), which is particularly unfortunate
	given that GraphicsMagick 1.3.41 now silently ignores such
	channels. Patch by Markus Mützel.  Addresses SourceForge issue
	#718 "Set reasonable defaults when writing TIFF with
	transparency".

2023-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated for 1.3.41 release.

	* version.sh: Updated for 1.3.41 release.

2023-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update Coverity metrics.

	* coders/tiff.c (ReadTIFFImage): Fix garbled logic pertaining to
	photometric checks.  Addresses Coverity 393177 "Structurally dead
	code".

	* coders/heif.c (ReadHEIFImage): For libheif versions <
	0x01090000, ignore_transformations is always 1. Add a conditional
	check to avoid Coverity 384803 "Logically dead code" for old
	versions.

	* coders/identity.c (ReadIdentityImage): Check the return value
	from AllocateImageColormap().  Addresses Coverity 384802
	"Unchecked return value".

	* magick/utility.c (ExpandFilename): sysconf() can return a
	negative value (e.g. -1).  Verify that the value is greater than 0
	before using it.  Addresses Coverity 384798 "Out-of-bounds
	access".

2023-08-09  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: 64 bytes for BMP header is reserved for OS/2
	https://www.fileformat.info/format/os2bmp/egff.htm

2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Re-indent/format for consistency.
	(ReadBMPImage): Adjust expected bmp_info.size (change 64 to 120).

2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Data behind declared BMP header should not be read.