@@ -1,5 +1,9 @@
 2023-08-15  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
+	* coders/bmp.c  Fix reading corruption 16bpp.
+
+2023-08-15  Fojtik Jaroslav  <JaFojtik@yandex.com>
+
 	* coders/tiff.c  Fix compillation problem in MSVC.
 
 
